--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 		</div><!-- /.container -->
 		<footer>
     		<ul>
-        		<li><a href="https://github.com/hankquinlan">github.com/hankquinlan</a></li>
+        		<li><a href="https://github.com/VillardTestPages">github.com/VillardTestsPages</a></li>
 			</ul>
 		</footer>
 	</body>
