--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<div class="container">
     		<div class="blurb">
         		<h1>Hi there!</h1>
-				<p>Test Check<em>Test Check 2 </em> Test Check 3 <a href="/about">Test check 4</a></p>
+				<p>Test Check22<em>Test Check 2 </em> Test Check 3 <a href="/about">Test check 4</a></p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
