--- a/index.html
+++ b/index.html
@@ -5,26 +5,14 @@
 		<link rel="stylesheet" type="text/css" href="/css/main.css">
 	</head>
 	<body>
-		<nav>
-    		<ul>
-        		<li><a href="/">Home</a></li>
-	        	<li><a href="/about">About</a></li>
-        		<li><a href="/cv">CV</a></li>
-        		<li><a href="/blog">Blog</a></li>
-    		</ul>
-		</nav>
 		<div class="container">
     		<div class="blurb">
         		<h1>Hi there!</h1>
-				<p>Test Check22<em>Test Check 2 </em> Test Check 3 <a href="/about">Test check 4</a></p>
+				<p> Hi the Button to go to site<em> Do not forget about only having one tab open</em> Maps can be found at ... <a href="/about"> What ever needs to be here.</a></p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
-    		<ul>
-        		<li><a href="https://github.com/VillardTestPages">github.com/VillardTestsPages</a></li>
-			</ul>
-			
-			<script type="text/javascript">
+				<script type="text/javascript">
 				function randomlinks(){
     				var myrandom=Math.round(Math.random()*9)
     				var links=new Array()
