--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 				}
 			</script>
 			<form>
-				<input type="button" value="random link!" onClick="randomlinks()">
+				<input type="button" value="Quizes/Test!" onClick="randomlinks()">
 			</form>
 		</footer>
 	</body>
