--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		<div class="container">
     		<div class="blurb">
         		<h1>Hi there!</h1>
-				<p> Hi the Button to go to site<em> Do not forget about only having one tab open</em> Maps can be found at ... <a href="/about"> What ever needs to be here.</a></p>
+				<p> Hit the Button to go to site<em> Do not forget about only having one tab open</em> Maps can be found at ... <a href="/about"> What ever needs to be here.</a></p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
